syntax = "proto3";

package test;

option go_package = "github.com/pantopic/wazero-grpc-server/test;pb";

service TestService {
  rpc Test(TestRequest) returns (TestResponse) {}
  rpc Retest(RetestRequest) returns (RetestResponse) {}
}

message TestRequest {
  uint64 foo = 1;
}
message TestResponse {
  uint64 bar = 1;
}

message RetestRequest {
  uint64 bar = 1;
}
message RetestResponse {
  uint64 foo = 1;
}
